# emag-253018-cdp

./: .gitignore  pyproject.toml  test_cart_page.py  test_category_page_worker.py
emag_crawler/: cart_page_handler.py  category_page_handler.py  detail_page_handler.py  exceptions.py  logger.py  models.py  utils.py  worker.py  workers.py
emag_crawler/handlers/: __init__.py  cart_page.py  category_page.py
emag_crawler/workers/: category_page.py
js/: hide-cookie-banner.js
